k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arsam-ingress
  namespace: arsam-app
spec:
  ingressClassName: nginx
  rules:
    - host: arsam.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-frontend
                port:
                  number: 80
